<resources>
    <string name="app_name">UpLand</string>
    <string name="txt_SignIp">Đăng nhập</string>
    <string name="txt_UserName">Tên đăng nhập</string>
    <string name="txt_Password">Mật khẩu</string>
    <string name="txt_address">Địa chỉ</string>
    <string name="txt_daututiencoc">Đầu tư tiền cọc</string>
    <string name="txt_dautu">Đầu tư</string>
    <string name="txt_tiencoc">Tiền cọc</string>
    <string name="txt_tienmua">Đầu tư tiền mua</string>
    <string name="txt_setting">Cài đặt</string>
    <string name="txt_help">Hỗ trợ</string>
    <string name="txt_langueage">Ngôn ngữ</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="txt_sokhachhangdadautuvao">Số khách hàng đã đầu tư vào</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_tiendautucuaban">Tiền đầu tư của bạn</string>
    <string name="txt_sotiendautuconlai">Số tiền đầu tư tối đa</string>
    <string name="pay_in">Nạp tiền</string>
    <string name="txt_coins">Xu</string>
    <string name="txt_email">Email</string>
    <string name="txt_phone">Điện thoại</string>
    <string name="txt_ok">OK</string>
    <string name="txt_songuoithamgia">Người tham gia đầu tư</string>
    <string name="txt_timedangtin">Thời gian đăng tin</string>
    <string name="txt_namekhachhang">Tên khách hàng</string>
    <string name="txt_info">Thông tin</string>
    <string name="txt_historycoins">Lịch sử nạp xu</string>
    <string name="txt_historydeposit">Danh sách đầu tư</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title">Tiêu đề</string>
    <string name="txt_ward">Phường, xã</string>
    <string name="txt_district">Quận, huyện</string>
    <string name="txt_city">Thành phố</string>
    <string name="txt_area">Diện tích</string>
    <string name="txt_arearong">Chiều rộng</string>
    <string name="txt_areadai">Chiều dài</string>
    <string name="txt_price_buy">Giá mua</string>
    <string name="txt_price_deposit">Giá cọc</string>
    <string name="txt_price_sell">Giá bán</string>
    <string name="txt_description">Miêu tả</string>
    <string name="txt_image">Hình ảnh</string>
    <string name="txt_Errortitle">Vui lòng nhập tiêu đề!</string>
    <string name="txt_Errorward">Phường, xã</string>
    <string name="txt_ErrorAddress">Vui lòng nhập địa chỉ!</string>
    <string name="txt_Errordistrict">Quận, huyện</string>
    <string name="txt_Errorcity">Thành phố</string>
    <string name="txt_Errorarea">Vui lòng nhập diện tích!</string>
    <string name="txt_Errorarearong">Chiều rộng</string>
    <string name="txt_Errorareadai">Chiều dài</string>
    <string name="txt_Errorprice_buy">Vui lòng nhập tiền mua!</string>
    <string name="txt_Errorprice_deposit">Vui lòng nhập tiền cọc!</string>
    <string name="txt_Errorprice_sell">Vui lòng nhập tiền bán!</string>
    <string name="txt_Errordescription">Vui lòng nhập miêu tả!</string>
    <string name="txt_Errorimage">Hình ảnh</string>
    <string name="txt_danhsachchothamdinh">Danh sách chờ thẩm định</string>
    <string name="txt_danhgia">Đánh giá</string>
    <string name="txt_duyet">Duyệt</string>
    <string name="txt_huy">Hủy</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_tindang">Tin đăng</string>
    <string name="txt_timbatdongsan">Tìm bất động sản</string>
    <string name="txt_thongbao">Thông báo</string>
    <string name="txt_taikhoan">Tài khoản</string>
    <string name="txt_chonkhuvuc">Chọn khu vực tìm kiếm</string>
    <string name="txt_dangupdate">Đang cập nhật</string>
    <string name="txt_phongngu">Phòng ngủ</string>
    <string name="txt_phongtam">Phòng tắm</string>
    <string name="txt_locbatdongsan">Lọc bất động sản</string>
</resources>
