<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/txt_help"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/dimens_20dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="@color/colorBackgroundGray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_above="@id/btn_ok_dialogquestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimens_16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/address"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_address"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_phone_black_24dp"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_phone"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_email"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/coins"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_tiencoc"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/depositpng"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_daututiencoc"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/hand"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_tienmua"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_monetization_on_black_24dp"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_coins"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_monetization_on_yellow_24dp"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_coins"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_songuoithamgia"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_access_time_black_24dp"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_timedangtin"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:layout_marginBottom="@dimen/dimens_16dp"
                        android:alpha="0.2"
                        android:background="@color/colorBackgroundGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:drawablePadding="@dimen/dimens_16dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/txt_namekhachhang"
                        android:textColor="@color/colorTextGray"
                        android:textSize="@dimen/textSize_16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <Button
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/btn_ok_dialogquestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/txt_ok"
            android:textColor="@color/colorTextBlue"
            android:textSize="@dimen/textSize_16sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>